# DyAU

./: LICENSE  README.md  pyproject.toml
DyAU/: __init__.py  config.py  data.py  eval.py  losses.py  metrics.py  model.py  modules.py  train.py  utils.py
configs/: DyAU.yaml  DyAU_toy.yaml  himatalk.yaml  himatalk_toy.yaml
himatalk/: __init__.py  config.py  data.py  eval.py  losses.py  metrics.py  model.py  train.py
scripts/: make_toy_data.py  smoke_test.py
