[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "himatalk"
version = "0.1.0"
description = "Pseudo-AU guided dyadic speech-driven 3D facial motion generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "PyYAML>=6.0",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
include = ["himatalk*"]
